# pascal-compiler

./: .gitignore  CMakeLists.txt  README.md  ast.hpp  const_expr.hpp  decl.hpp  driver.cpp  driver.hh  enum_stmt.hpp  exceptions.hpp  expr.hpp  format.sh  fwd_stmt.hpp  get_idx.hpp  main.cpp  ops.hpp  parser.y  printer.cpp  scanner.l  stdlib.cpp  stmt.hpp  test.pas  test.txt  type.hpp  visit.hpp  visitor.hpp
.githooks/: precommit
ast/: ast.cpp  ast.hpp  const_expr.hpp  decl.hpp  exceptions.hpp  expr.hpp  ops.hpp  printer.cpp  stmt.hpp  type.hpp  visit.hpp  visitor.cpp  visitor.hpp
ast/utils/: enum_stmt.hpp  fwd_stmt.hpp  get_idx.hpp
ast/visitors/: lowerer.cpp  lowerer.hpp  printer.cpp  printer.hpp  typechecker.cpp
ast/visitors/lowerer/: eval_expr.cpp  llvm_type.cpp  lowerer.cpp  visit_decl.cpp  visit_stmt.cpp  visit_toplevel.cpp
ast/visitors/lowerer/builtins/: intio.cpp  stringio.cpp
parsing/: parser.y  scanner.h  scanner.l  sema.hpp
scripts/: install_ubuntu_deps.sh  pre-commit.bash  prepare_llvm.sh
support/: assert.hpp  computed_type.cpp  computed_type.hpp  error.hpp  scopes.hpp  template_utils.hpp  type.hpp  unreachable.hpp
